# ddpserver

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: jvar.cmake
examples/: CMakeLists.txt  libwebsockets.cpp  meteor_auth.cpp  meteor_auth.js  mongoose.cpp  websocketpp.cpp
include/: ddpserver.h
src/: CMakeLists.txt  ddpserver.cpp
